# BackUpper

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  Controller.cpp  Controller.h
Core/Configurator/: CMakeLists.txt  Configurator.cpp  Configurator.h
Core/TimeManager/: CMakeLists.txt  TimeManager.cpp  TimeManager.h
FileManager/: FileWatcher.pro
FileSystem/: CMakeLists.txt  FileManager.cpp  FileManager.h
FileSystem/FileCopier/: CMakeLists.txt  FileCopier.cpp  FileCopier.h
FileSystem/FileNameUtil/: CMakeLists.txt  FileNameUtil.cpp  FileNameUtil.h
FileSystem/FileWatcher/: CMakeLists.txt  FileStates.h  FileWatcher.cpp  FileWatcher.h
GUI/: CustomButton.cpp  DialogCreate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
JSON_parser/: README.txt
JSON_parser/test_json/: test.json
Tests/: CMakeLists.txt  FileCopierTest.cpp  Test.cpp
code/: .gitignore  README.md
code/FileManager/: .gitignore  ArgumentsValidator.h  CMakeLists.txt  FileCopier.h  FileWatcher.h  main.cpp
code/GUI/: CustomButton.h  DialogCreate.cpp  DialogCreate.ui  Widgets.pro
code/JSON_parser/: CMakeLists.txt
code/JSON_parser/json/: CMakeLists.txt  main.cpp
code/JSON_parser/tests/: CMakeLists.txt
